src/components/sections/work/Work.module.css
.stickyContainer {
  position: sticky;
  top: 0;
  height: 100vh;
  overflow: hidden; 
  display: flex;
  align-items: center;
  border-radius: 30px ;
  padding: 0px 20px;

}

.background {
  background-color: #EFEFEF;
  width: -webkit-fill-available;
  color: var(--text-color);
  padding: 20px 0px 20px 20px;
  border-radius: 30px;
  min-height: 300px;
}

.headline {
  font-size: 56px;
  font-weight: bold;
  margin-bottom: 30px;
  font-family: "Geist", "Geist Placeholder", sans-serif;
  display: flex;
}

.numberOfProjects {
  font-size: 18px;
  font-weight: bold;
  margin-left: 10px;
}

.content {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 500px;
  height: 360px;
  background-color: var(--text-color);
  border-radius: 20px;
  padding: 15px;
}

.wrapperImg {
  width: 100%;
  height: 265px;
  object-fit: cover;
  border-radius: 5px;
}

.wrapperContent {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 15px;
  color: var(--background-color);
  text-decoration: none;
}

.wrapperImg:hover {
  transform: scale(.95);
  transition: all 0.3s ease-in-out;
}

.infoWrapper {

}

.nameProject {
  font-size: 24px;
  font-weight: 500;
  margin-top: 10px;
  font-family: "Geist", "Geist Placeholder", sans-serif;
}

.toolsWrapper {
  display: flex;
  gap: 10px;
  margin-top: 10px;
  flex-wrap: wrap;
}

.toolsProject {
  width: fit-content;
  background-color: var(--background-color);
  padding: 4px 8px;
  border-radius: 8px;
  font-family: "Geist", "Geist Placeholder", sans-serif;
  color: var(--text-color);
}

/* Fake scroll section */
.fakeScrollSection {
  height: 500vh; 
  position: relative;
}


.horizontalWrapper {
  overflow: hidden;
  width: 100%;
  min-height: 300px;
}

.cardsRow {
  display: flex;
  gap: 30px;
  width: max-content;
  padding-left: calc(50vw - 250px - 60px); /* 50vw نص الشاشة - نصف عرض الكارت - 60px */
}


@media (max-width: 768px) {

  .content {
    width: 350px;
  }
}

